--- a/form2.html
+++ b/form2.html
@@ -64,8 +64,8 @@
                   </div>
                   <div class="form-group mb-5">
                     <div class="custom-control custom-checkbox mb-3">
-                      <input type="checkbox" class="custom-control-input " id="customControlValidation1" required>
-                      <label class="custom-control-label" for="customControlValidation1">Ich akzeptiere die <a target="_blank" href="#!">AGB</a>.</label>
+                      <input type="checkbox" class="custom-control-input " id="checkbox2" required>
+                      <label class="custom-control-label" for="checkbox2">Ich akzeptiere die <a target="_blank" href="#!">AGB</a>.</label>
                     </div>
                   </div>
                   <button class="btn btn-primary">Connect Now</button>
