--- a/form1.html
+++ b/form1.html
@@ -28,8 +28,15 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 offset-md-3">
-              <div class="text-center pt-2">
-                <a href="#!"><img src="./images/support.jpg" alt=""></a>
+              <div class="d-flex justify-content-center pt-2">
+                <span class="mx-3">
+                  <img width="12" src="./images/connect.svg" alt="">
+                  Support apaleo Connect
+                </span>
+                <span class="mx-3">
+                  <img width="22" src="./images/free.svg" alt="">
+                  Free trial
+                </span>
               </div>
               <div class="form-box">
                 <form>
