--- a/form2.html
+++ b/form2.html
@@ -78,7 +78,7 @@
                   <button class="btn btn-primary">Connect Now</button>
                 </form>
               </div>
-              <ul class="pl-3">
+              <ul class="features">
                 <li>convert your booking transactions into a DATEV format</li>
                 <li>Export data automatically</li>
                 <li>Download your DATEV files as often as you wish</li>
